[tool.poetry]
name = "poker-statistic"
version = "0.1.0"
description = ""
authors = ["Alexander Frolov <mosbka.37@gmail.com>"]
readme = "README.md"
packages = [{include = "poker_statistic"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
flask = "^3.0.0"
flask-apscheduler = "^1.13.1"
requests = "^2.31.0"
flask-restx = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
